# Kertokt

./: README.md  index.html  package.json  pyproject.toml  vercel.json
data/sample_reports/: coverage_benefits.json  ewg_denver.json  utility_denver.json
docs/: automation_plan.md
src/: main.js  styles.css
src/data/: escalationRules.js  trainingDataset.js  waterStandards.js
src/kertokt/: __init__.py  __main__.py  cli.py  data_models.py  pipeline.py  summaries.py
src/kertokt/analysis/: __init__.py  recommendations.py
src/kertokt/ingestion/: __init__.py  coverage.py  ewg.py  utility.py
src/utils/: emailTemplates.js
