[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kertokt"
version = "0.1.0"
description = "Automated analysis toolkit for water-quality and household service reports"
requires-python = ">=3.10"
authors = [{name = "Kertokt Maintainers"}]
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
